Added a couple of divs and some text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>Git Practice </title>
     </head>
     <body>
-
+        <div>
+            <h1>This is just practice to get used to using Git and GitHub</h1>
+        </div>
+        <div>
+            <p>This is a great way to see how Github actually works.</p>
+        </div>
     </body>
 </html>
